update get medicune api
