# handlers/getMedicine.go
@@ -4,6 +4,7 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/swag"
 	runtime "github.com/hamza-sharif/homeopathic-doctor-assistant"
+	genModel "github.com/hamza-sharif/homeopathic-doctor-assistant/gen/models"
 	gen "github.com/hamza-sharif/homeopathic-doctor-assistant/gen/restapi/operations"
 )
 
@@ -32,10 +33,14 @@ func (c *getMedicine) Handle(params gen.GetMedicinesParams, principal interface{
 		limit = 5000
 	}
 
-	meds, err := c.rt.Svc.GetMedicine(swag.StringValue(params.Name), limit, offset)
+	count, meds, err := c.rt.Svc.GetMedicine(swag.StringValue(params.Name), limit, offset)
 	if err != nil {
 		log().Debugf("not able to get list of medicines: %v", err)
 		return gen.NewGetMedicinesBadRequest().WithPayload("not able to get medicines")
 	}
-	return gen.NewGetMedicinesOK().WithPayload(convertMedicine(meds))
+
+	return gen.NewGetMedicinesOK().WithPayload(&genModel.MedicineResponse{
+		Size: swag.Int64(count),
+		Data: convertMedicine(meds),
+	})
 }
